--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,4 +6,13 @@
 		<%= f.label :title %><br>
 		<%= f.text_field :title %>
 	</p>
+	<p>
+		
+		<%= f.label :text %><br>
+		<%= f.text_area :text %>
+	</p>
+	<p>
+		
+		<%= f.submit %>
+	</p>
 <% end %>
