--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Article</h1>
 
-<%= form_for :article do |f| %>
+<%= form_for :article, url: '/articles' do |f| %>
 	<p>
 		
 		<%= f.label :title %><br>
