add action articles update

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,8 +12,8 @@
 	</p>
 	
 	<p>
-		<%= link_to 'show', article_path(article) %> |
-		<%= link_to 'edit', edit_article_path(article) %>
+		<%= link_to 'Просмотр', article_path(article) %> |
+		<%= link_to 'Редактировать', edit_article_path(article) %>
 	</p>
 	<hr>
 <% end %>	
