--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,7 @@
+<p>
+		<%= link_to 'Новая статья', new_article_path(@article) %> 
+		
+	</p>
 <h1>Все статьи:</h1>
 
 <% @articles.each do |article| %>
