--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,6 +16,8 @@
 	Дата публикации:  <%= @article.created_at%>
 </p>
 <p>
-	<%= link_to 'Все статьи', articles_path(@articles) %> |
-	<%= link_to 'Редактировать', edit_article_path(@article) %>
+	<%= link_to 'Назад', articles_path(@articles) %> |
+	<%= link_to 'Редактировать', edit_article_path(@article) %> |
+	<%= link_to 'Удалить', article_path(@article), method: :delete, data: {:confirm => "Вы уверены?" } %> 
+
 </p>
