add terms and about

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <p>
-		<%= link_to 'Новая статья', new_article_path(@article) %> 
+		<%= link_to 'New article', new_article_path(@article) %> | 
+		<%= link_to 'Terms', terms_path %> |
+		<%= link_to 'About', about_path %>
 		
 	</p>
 <h1>Все статьи:</h1>
