fixed link_to destroy

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,5 +18,5 @@
 <p>
 	<%= link_to 'Назад', articles_path(@articles) %> |
 	<%= link_to 'Редактировать', edit_article_path(@article) %> |
-	<%= link_to 'Удалить', article_path(@article), method: :delete, data: {:confirm => "Вы уверены?" } %> 
+	<%= link_to 'Удалить', article_path(@article), method: :delete, data: { confirm: 'Вы уверены?'} %> 
 </p>
