--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,3 +20,21 @@
 	<%= link_to 'Редактировать', edit_article_path(@article) %> |
 	<%= link_to 'Удалить', article_path(@article), method: :delete, data: { confirm: 'Вы уверены?'} %> 
 </p>
+
+<%= form_for([@article, @article.comments.build]) do |f| %>
+	
+	<p>
+		
+		<%= f.label :author %><br>
+		<%= f.text_field :author %>
+	</p>
+	<p>
+		
+		<%= f.label :body %><br>
+		<%= f.text_area :body %>
+	</p>
+	<p>
+		
+		<%= f.submit "Опубликовать" %>
+	</p>
+<% end %>
