--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -38,3 +38,14 @@
 		<%= f.submit "Опубликовать" %>
 	</p>
 <% end %>
+
+<% @article.comments.each do |comment| %>
+	<h2>
+		<%= comment.author %>
+	</h2>
+	<p>
+		
+		<%= comment.body %>
+	</p>
+	<hr>
+<% end %>
