--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <% if user_signed_in? %>
-    <span>Здравствуйте, <%= current_user.email %></span>
+    <span>Здравствуйте, <%= current_user.username %></span>
     <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
 <% else %>
     <%= link_to 'Войти', new_user_session_path %> или <%= link_to 'Зарегистрироваться', new_user_registration_path %>
