add column author to articles

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,14 @@
 <h1>New Article</h1>
 
 <%= form_for :article, url: articles_path do |f| %>
+
+	<p>
+		
+		<%= f.label :author %>:
+		<% if user_signed_in? %>
+		<%= current_user.username  %>
+		<% end %>
+	</p>
 	<p>
 		
 		<%= f.label :title %><br>
