--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,10 @@
 <hr>
 
 <p>
+	Автор: <%= @article.author %>
+</p>
+
+<p>
 	Дата публикации:  <%= @article.created_at%>
 </p>
 <p>
@@ -22,7 +26,7 @@
 </p>
 
 <h2>
-	Добавить коментарий!
+	Оставьте комментарий!
 </h2>
 
 <%= form_for([@article, @article.comments.build]) do |f| %>
@@ -41,7 +45,7 @@
 	</p>
 	<p>
 		
-		<%= f.submit "Опубликовать" %>
+		<%= f.submit "Оставить комментарий" %>
 	</p>
 <% end %>
 
