add link_to person/profile

--- a/app/views/persons/profile.html.erb
+++ b/app/views/persons/profile.html.erb
@@ -1,2 +1,2 @@
 <h1>Persons#profile</h1>
-<p>Find me in app/views/persons/profile.html.erb</p>
+<p><%= link_to 'Все статьи', articles_path(@articles) %></p>
