--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,8 @@
 <p>
 		<%= link_to 'New article', new_article_path(@article) %> | 
 		<%= link_to 'Terms', terms_path %> |
-		<%= link_to 'About', about_path %>
+		<%= link_to 'About', about_path %> |
+		<%= link_to 'Profile', user_root_path %>
 		
 	</p>
 <h1>Все статьи:</h1>
