--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 
+          
 <h1>Все статьи:</h1>
 <hr>
 
@@ -13,9 +14,8 @@
 	</p>
 	
 	<p>
+		Автор :<%= article.author %>
 		<%= link_to 'Просмотр', article_path(article) %>
-		
-		
 	</p>
 	<hr>
 <% end %>	 
