--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,15 +12,15 @@
 	<p>
 		
 		<%= f.label :title %><br>
-		<%= f.text_field :title %>
+		<%= f.text_field :title, :class => 'form-control' %>
 	</p>
 	<p>
 		
 		<%= f.label :text %><br>
-		<%= f.text_area :text %>
+		<%= f.text_area :text, :class => 'form-control' %>
 	</p>
 	<p>
 		
-		<%= f.submit "Опубликовать" %>
+		<%= f.submit "Опубликовать", :class => 'btn btn-primary' %>
 	</p>
 <% end %>
