--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -25,27 +25,21 @@
 	<%= link_to 'Удалить', article_path(@article), method: :delete, data: { confirm: 'Вы уверены?'} %> 
 </p>
 
-<h2>
+<h3>
 	Оставьте комментарий!
-</h2>
+</h3>
 
 <%= form_for([@article, @article.comments.build]) do |f| %>
 	
+	
 	<p>
 		
-		<%= f.label :author %>:
-		<% if user_signed_in? %>
-		<%= current_user.username  %>
-		<% end %>
+		
+		<%= f.text_area :body, :class => 'form-control' %>
 	</p>
 	<p>
 		
-		<%= f.label :body %><br>
-		<%= f.text_area :body %>
-	</p>
-	<p>
-		
-		<%= f.submit "Оставить комментарий" %>
+		<%= f.submit "Оставить комментарий", :class => 'btn btn-primary' %>
 	</p>
 <% end %>
 
