--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,19 +28,19 @@
             <% if user_signed_in? %>
             <div class="col-xs-8 col-md-8 col-sm-8">
                <p>
-                  <%= link_to 'Все статьи', articles_path(@articles) %> |
-                  <%= link_to 'Новая статья', new_article_path(@article) %> | 
-                  <%= link_to 'Terms', terms_path %> |
-                  <%= link_to 'About', about_path %> |
+                  <%= link_to 'Все статьи  ', articles_path(@articles) %>   |
+                  <%= link_to 'Новая статья', new_article_path(@article) %>   | 
+                  <%= link_to 'Terms', terms_path %>   |
+                  <%= link_to 'About', about_path %>   |
                   <%= link_to 'Профиль', user_root_path %>
                </p>
             </div>  
-            <div class="col-xs-4 col-md-4 col-sm-4">
-              <span>Здравствуйте, <%= current_user.username %></span>
-              <button type="button" class="btn btn-light navbar-btn">
-
+            <div class="col-xs-3 col-md-3 col-sm-3">
+              <span>Здравствуйте, <%= current_user.username %> </span>
+            </div> 
+            <div class="col-xs-1 col-md-1 col-sm-1">  
                 <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
-              </button>
+              
             
             </div><!--col-->
 
@@ -49,13 +49,13 @@
           <div class="col-xs-8 col-md-8 col-sm-8">
           </div>
           <div class="col-xs-4 col-md-4 col-sm-4">  
-          <button type="button" class="btn btn-light navbar-btn">
+          
 
-            <%= link_to 'Войти', new_user_session_path %></button> или
-            <button type="button" class="btn btn-light navbar-btn">
+            <%= link_to 'Войти', new_user_session_path, :class => 'btn btn-success' %> или
+            
 
-              <%= link_to 'Зарегистрироваться', new_user_registration_path %>
-            </button>
+            <%= link_to 'Зарегистрироваться', new_user_registration_path, :class => 'btn btn-light' %>
+            
           </div> 
           
           <% end %>
