button edit and destroy is not using else not author articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,9 +20,11 @@
 	Дата публикации:  <%= @article.created_at%>
 </p>
 <p>
-	<%= link_to 'Все статьи', articles_path(@articles) %> |
-	<%= link_to 'Редактировать', edit_article_path(@article) %> |
-	<%= link_to 'Удалить', article_path(@article), method: :delete, data: { confirm: 'Вы уверены?'} %> 
+	<%= link_to 'Все статьи', articles_path(@articles), :class => 'btn btn-info' %> 
+	<% if current_user.username == @article.author %>
+    	<%= link_to 'Редактировать', edit_article_path(@article), :class => 'btn btn-success' %> 
+		<%= link_to 'Удалить', article_path(@article), method: :delete, data: { confirm: 'Вы уверены?'}, :class => 'btn btn-danger' %> 
+	<% end %>
 </p>
 
 <h3>
