--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,16 +4,16 @@
 	<p>
 		
 		<%= f.label :title %><br>
-		<%= f.text_field :title %>
+		<%= f.text_field :title, :class => 'form-control' %>
 	</p>
 	<p>
 		
 		<%= f.label :text %><br>
-		<%= f.text_area :text %>
+		<%= f.text_area :text, :class => 'form-control' %>
 	</p>
 	<p>
 		
-		<%= f.submit "Сохранить" %>
+		<%= f.submit "Сохранить", :class => 'btn btn-primary' %>
     
   </p>
 	
