--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -15,6 +15,11 @@
 	</p>
 	<p>
 		
+		
+		<%= f.file_field :picture %>
+	</p>
+	<p>
+		
 		<%= f.submit "Опубликовать", :class => 'btn btn-primary' %>
 	</p>
 <% end %>
