--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -11,6 +11,17 @@
 		<%= f.label :text %><br>
 		<%= f.text_area :text, :class => 'form-control' %>
 	</p>
+
+	<p>
+		
+		
+		<%= image_tag @article.picture.url, width: '400' %>
+	</p>
+	<p>
+		
+		
+		<%= f.file_field :picture %>
+	</p>
 	<p>
 		
 		<%= f.submit "Сохранить", :class => 'btn btn-primary' %>
