--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
 		<%= article.title %>
 	</h3>
 	<p>
-		<%= truncate(article.text, length: 30) %> <!-- скрывает в ... слишком длинный текст -->
+		<%= sanitize article.text %> <!-- скрывает в ... слишком длинный текст -->
 	</p>
 	
 	<p>
