--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,8 @@
 	<p>
 		
 		<%= f.label :text %><br>
-		<%= f.text_area :text, :class => 'form-control' %>
+		<%= f.hidden_field :text, id: :article_text %>
+		<trix-editor input="article_text"></trix-editor>
 	</p>
 	<p>
 		
