add trix editor class="form-control"

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,7 @@
 	<p>
 		
 		<%= f.label :text %><br>
-		<%= f.hidden_field :text, id: :article_text %>
+		<%= f.hidden_field :text, id: :article_text, :class => 'form-control' %>
 		<trix-editor input="article_text"></trix-editor>
 	</p>
 	<p>
