--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,7 +12,7 @@
 		
 		<%= f.label :text %><br>
 		<%= f.hidden_field :text, id: :article_text, :class => 'form-control' %>
-		<trix-editor input="article_text"></trix-editor>
+		<trix-editor input="article_text" class="form-control"></trix-editor>
 	</p>
 	<p>
 		
