--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,11 @@
  .field_with_errors input {
  	border-color: red;
  }
+ body { 
+ 	padding-top: 10px;
+ 	padding-left: 70px;
+ 	padding-right: 70px;
+ 	 }
 
 .field_with_errors textarea {
  	border-color: red;
