--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
                  <li role="presentation"><%= link_to 'Terms', terms_path %></li>
                  <li role="presentation"><%= link_to 'About', about_path %></li>
                  <li role="presentation"><%= link_to 'Профиль', user_root_path %></li>
+                 <li role="presentation"><%= link_to 'Обратная связь', contacts_path %></li>
                  <% if current_user[:username] == 'karamalesa' %>
                    <li role="presentation"><%= link_to 'Админка',  rails_admin_path %> </li>
                  <% end %> 
