add tinymce on article edit.html.erb

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -9,8 +9,9 @@
 	<p>
 		
 		<%= f.label :text %><br>
-		<%= f.hidden_field :text, id: :article_text %>
-		<trix-editor input="article_text"></trix-editor>
+		<!--<%= f.hidden_field :text, id: :article_text %>
+		<trix-editor input="article_text"></trix-editor>-->
+		<%= f.text_area :text, rows: 5, cols: 25, :class => "tinymce" %>
 	</p>
 	<p>
 		
@@ -30,4 +31,4 @@
   </p>
 	
 <% end %>
-
+<%= tinymce %>
