--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Оставьте свое сообщение и мы с вами свяжемся!</h1>
+<h1>Contact us</h1>
 
 <%= form_for :contact, url: contacts_path do |f| %>
 
