--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
  	border-color: red;
  }
  body { 
+	background: yellowgreen;
  	padding-top: 10px;
  	padding-left: 70px;
  	padding-right: 70px;
