--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,4 @@
 
-          
-<h1>Все статьи:</h1>
 
 
 
@@ -24,20 +22,23 @@
 		<%= link_to 'Просмотр', article_path(article) %> 
 	</p>-->
 	
-	
-	<article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="<%= persons_profile_path %>"><%= article.author %></a>
-              <small class="text-muted"><%= article.created_at%></small>
-            </div>
-            <h2><a class="article-title" href="<%= article_path(article) %>"><%= article.title %></a></h2>
-            <p class="article-content"><%= sanitize article.text %></p>
-            <p>
-				<%= image_tag article.picture.url, width: '100s' if article.picture? %> 
-    		</p>
-          </div>
-    </article>
-        
+	<div class="content-border">
+		<article class="media content-section">
+			
+						<div class="media-body">
+							<div class="article-metadata">
+								<a class="mr-2" href="<%= persons_profile_path %>"><%= article.author %></a>
+								<small class="text-dark"><%= article.created_at%></small>
+							</div>
+							<h2><a class="article-title" href="<%= article_path(article) %>"><%= article.title %></a></h2>
+							<p class="article-content"><%= sanitize article.text %></p>
+							<p>
+					<%= image_tag article.picture.url, width: '100s' if article.picture? %> 
+					</p>
+						</div>
+						
+			</article>
+     </div>  
 <% end %>	 
 
+ 
