--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,29 +13,37 @@
     <link href="/public/main.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body class='body'>
      <% if user_signed_in? %>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <ul class="nav nav-pills">
-                 <li role="presentation" class=""><%= link_to 'Все статьи', articles_path(@articles) %></li>
-                 <li role="presentation"><%= link_to 'Новая статья', new_article_path(@article) %></li>
-                 <li role="presentation"><%= link_to 'Terms', terms_path %></li>
-                 <li role="presentation"><%= link_to 'About', about_path %></li>
-                 <li role="presentation"><%= link_to 'Профиль', user_root_path %></li>
-                 <li role="presentation"><%= link_to 'Обратная связь', contacts_path %></li>
-                 <% if current_user[:username] == 'karamalesa' %>
-                   <li role="presentation"><%= link_to 'Админка',  rails_admin_path %> </li>
-                 <% end %> 
-                 <li role="presentation"><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
-              </ul>
+     <div class="container">
+      <div class="navbars-top"> 
+        <div class="row">
+          <div class="col-md-9">
+            <div class="navbar-header">
+              <ul class="nav nav-pills">
+                <li role="presentation" class=""><%= link_to 'Все статьи', articles_path(@articles) %></li>
+                <li role="presentation"><%= link_to 'Новая статья', new_article_path(@article) %></li>
+                <li role="presentation"><%= link_to 'Terms', terms_path %></li>
+                <li role="presentation"><%= link_to 'About', about_path %></li>
+                <li role="presentation"><%= link_to 'Профиль', user_root_path %></li>
+                <li role="presentation"><%= link_to 'Обратная связь', contacts_path %></li>
 
+                <% if current_user[:username] == 'karamalesa' %>
+                  <li role="presentation"><%= link_to 'Админка',  rails_admin_path %> </li>
+                <% end %> 
+
+                <li role="presentation"><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
+              </ul>
+              
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <h2 class="nav_padding">Здравствуйте, <%= current_user.username %></h2>
+          </div>  
         </div>
-        <h2>Здравствуйте, <%= current_user.username %></h2>
-          
       </div>
-    </nav>
+    </div>
 
 
 
@@ -61,30 +69,63 @@
            
           <% else %>
           
-            
-          <nav class="navbar navbar-default">
-            <div class="container-fluid">
-               <div class="navbar-header">
-                  <ul class="nav nav-pills">
-                    <li role="presentation" class=""><%= link_to 'Зарегистрироваться', new_user_registration_path, :class => 'btn btn-warning' %></li>
-                    <li role="presentation"><%= link_to 'Войти', new_user_session_path, :class => 'btn btn-success' %></li>
-                  </ul>
-                   
-               </div>
+            <div class="container"> 
+              <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                      <ul class="nav nav-pills">
+                        <li role="presentation" class=""><%= link_to 'Зарегистрироваться', new_user_registration_path, :class => 'btn btn-warning' %></li>
+                        <li role="presentation"><%= link_to 'Войти', new_user_session_path, :class => 'btn btn-success' %></li>
+                      </ul>
+                  </div>
+                </div>
+              </nav>
             </div>
-          </nav>
           
           <% end %>
           
-           </nav>
-           </div> <!-- container-->
+           
+           
          <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        
+          <div class='col-md-3'>
+            <div class="navbars-border">
+            <div class="navbars">
+              <div>
+              <a href="https://github.com/karamalesa1980">My Github</a>
+              </div>
+             <div>
+                <a href="https://karamalesa.herokuapp.com/">My Heroku</a>
+              </div>
+            <a>New</a>
+            </div>
+            </div>
+
+            <div class="navbars-border">
+            <div class="navbars">
+              <div>
+                <a href="https://github.com/karamalesa1980">My Github</a>
+              </div>
+             
+            <a>New</a>
+            </div>
+            </div>
+          </div>
+        
+        <div class="col-md-9">
 
           <%= yield %>
 
-           </div>
+        </div>
+
+        
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="footer">
+          </div>
+        </div>  
       </div>
     </main>
 
@@ -97,5 +138,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </div>
   </body>
 </html>
