--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
  }
  body { 
 	background: yellowgreen;
- 	padding-top: 10px;
+ 	//padding-top: 10px;
  	padding-left: 70px;
  	padding-right: 70px;
  	 }
